# negilib

./: README.md  main.py  pyproject.toml
negilib/: __init__.py  core.py
