[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negilib"
version = "0.1.0"
description = "Automatically measure Python function runtime"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name="negiradomoti"}
]